--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -2836,6 +2836,7 @@ category.dynamic-data-lists=Llistes de dades dinàmiques
 category.dynamic-data-mapping=Mapatge de dades dinàmiques
 category.email=Correu electrònic
 category.entertainment=Entreteniment
+category.feature-flags=Feature Flags (Automatic Copy)
 category.file-storage=Emmagatzematge de fitxers
 category.finance=Finances
 category.form-navigator-extensions=Extensions del navegador de formularis
@@ -3997,6 +3998,7 @@ could-not-connect-to-address-x.-please-verify-that-the-specified-port-is-correct
 could-not-connect-to-the-database.-please-verify-that-the-settings-are-correct=No es pot establir connexió amb la base de dades. Verifiqueu que la configuració sigui la correcta.
 could-not-connect-to-the-liferay-marketplace=No s'ha pogut connectar amb el Marketplace de Liferay.
 could-not-save-draft-to-the-server=No s'ha pogut desar l'esborrany al servidor.
+could-not-update-feature-flag=Could not update feature flag. (Automatic Copy)
 count=Compta
 counters=Comptadors
 countries=Països
@@ -6591,6 +6593,12 @@ favorites=Preferits
 fax=Fax
 fax-number=Número de fax
 fbml=FBML (Facebook Markup Language)
+feature.flag.status.description.beta=Beta features are experimental and not supported. Use with caution. (Automatic Copy)
+feature.flag.status.description.dev=Developer features are under active development. Do not activate unless you are on a development instance of DXP. (Automatic Copy)
+feature.flag.status.description.release=Release features provide an easy way to onboard new functionality in DXP. They are fully supported and can be activated individually and progressively. (Automatic Copy)
+feature.flag.status.title.beta=Beta (Automatic Copy)
+feature.flag.status.title.dev=Developer (Automatic Copy)
+feature.flag.status.title.release=Release (Automatic Copy)
 featured=Destacat
 featured-content=Contingut destacat
 featured-image=Imatge destacada
@@ -6796,6 +6804,7 @@ filter-by-type=Filtra per tipus
 filter-by-user=Filtra per usuari
 filter-by-user-group=Filtra per grup d'usuaris
 filter-by-visibility=Filtra per visibilitat
+filter-by-x=Filter by {0} (Automatic Copy)
 filter-collection=Filtra la col·lecció
 filter-contacts=Filtra Contactes
 filter-field=Camp a filtrar
