--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
@@ -2836,6 +2836,7 @@ category.dynamic-data-lists=Δυναμικές λίστες δεδομένων (
 category.dynamic-data-mapping=Δυναμική αντιστοίχιση δεδομένων (Automatic Translation)
 category.email=Email (Automatic Translation)
 category.entertainment=Ψυχαγωγία
+category.feature-flags=Feature Flags (Automatic Copy)
 category.file-storage=Αποθήκευση αρχείων (Automatic Translation)
 category.finance=Χρηματοοικονομικά
 category.form-navigator-extensions=Επεκτάσεις περιήγησης φόρμας (Automatic Translation)
@@ -3997,6 +3998,7 @@ could-not-connect-to-address-x.-please-verify-that-the-specified-port-is-correct
 could-not-connect-to-the-database.-please-verify-that-the-settings-are-correct=Δεν ήταν δυνατή η σύνδεση με τη βάση δεδομένων. Βεβαιωθείτε ότι οι ρυθμίσεις είναι σωστές. (Automatic Translation)
 could-not-connect-to-the-liferay-marketplace=Δεν ήταν δυνατή η σύνδεση με την αγορά Liferay. (Automatic Translation)
 could-not-save-draft-to-the-server=Αδυναμία αποθήκευσης πρόχειρου στον server.
+could-not-update-feature-flag=Could not update feature flag. (Automatic Copy)
 count=Πλήθος
 counters=Ταμεία
 countries=Χώρες (Automatic Translation)
@@ -6591,6 +6593,12 @@ favorites=Αγαπημένα
 fax=Φαξ (Automatic Translation)
 fax-number=Αριθμός Fax
 fbml=Fbml (Automatic Translation)
+feature.flag.status.description.beta=Beta features are experimental and not supported. Use with caution. (Automatic Copy)
+feature.flag.status.description.dev=Developer features are under active development. Do not activate unless you are on a development instance of DXP. (Automatic Copy)
+feature.flag.status.description.release=Release features provide an easy way to onboard new functionality in DXP. They are fully supported and can be activated individually and progressively. (Automatic Copy)
+feature.flag.status.title.beta=Beta (Automatic Copy)
+feature.flag.status.title.dev=Developer (Automatic Copy)
+feature.flag.status.title.release=Release (Automatic Copy)
 featured=Προβεβλημένο
 featured-content=Επιλεγμένο περιεχόμενο (Automatic Translation)
 featured-image=Εικόνα με δυνατότητα (Automatic Translation)
@@ -6796,6 +6804,7 @@ filter-by-type=Φιλτράρισμα κατά τύπο (Automatic Translation)
 filter-by-user=Φιλτράρισμα ανά χρήστη
 filter-by-user-group=Φιλτράρισμα ανά ομάδα χρηστών
 filter-by-visibility=Filter by Visibility (Automatic Copy)
+filter-by-x=Filter by {0} (Automatic Copy)
 filter-collection=Filter Collection (Automatic Copy)
 filter-contacts=Επαφές φίλτρου (Automatic Translation)
 filter-field=Πεδίο φίλτρου (Automatic Translation)
