--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
@@ -2836,6 +2836,7 @@ category.dynamic-data-lists=Dünaamilised andmeloendid (Automatic Translation)
 category.dynamic-data-mapping=Dünaamiline andmete vastendamine (Automatic Translation)
 category.email=Meil (Automatic Translation)
 category.entertainment=Meelelahutus
+category.feature-flags=Feature Flags (Automatic Copy)
 category.file-storage=Faili salvestusruum (Automatic Translation)
 category.finance=Finants
 category.form-navigator-extensions=Vormi navigaatori laiendused (Automatic Translation)
@@ -3997,6 +3998,7 @@ could-not-connect-to-address-x.-please-verify-that-the-specified-port-is-correct
 could-not-connect-to-the-database.-please-verify-that-the-settings-are-correct=Andmebaasiga ei saanud ühendust luua. Veenduge, et sätted on õiged. (Automatic Translation)
 could-not-connect-to-the-liferay-marketplace=Liferay turuplatsiga ei saanud ühendust luua. (Automatic Translation)
 could-not-save-draft-to-the-server=Mustandi serverisse salvestamine ei õnnestunud.
+could-not-update-feature-flag=Could not update feature flag. (Automatic Copy)
 count=Loenda (Automatic Translation)
 counters=Riik
 countries=Riikide (Automatic Translation)
@@ -6591,6 +6593,12 @@ favorites=Lemmikud
 fax=Faks
 fax-number=Faksinumber
 fbml=Fbml (Automatic Translation)
+feature.flag.status.description.beta=Beta features are experimental and not supported. Use with caution. (Automatic Copy)
+feature.flag.status.description.dev=Developer features are under active development. Do not activate unless you are on a development instance of DXP. (Automatic Copy)
+feature.flag.status.description.release=Release features provide an easy way to onboard new functionality in DXP. They are fully supported and can be activated individually and progressively. (Automatic Copy)
+feature.flag.status.title.beta=Beta (Automatic Copy)
+feature.flag.status.title.dev=Developer (Automatic Copy)
+feature.flag.status.title.release=Release (Automatic Copy)
 featured=Esiletõstetud
 featured-content=Esiletõstetud sisu (Automatic Translation)
 featured-image=Esiletõstetud pilt (Automatic Translation)
@@ -6796,6 +6804,7 @@ filter-by-type=Filtreeri tüübi järgi (Automatic Translation)
 filter-by-user=Filtreeri kasutaja järgi (Automatic Translation)
 filter-by-user-group=Filtreeri kasutajagrupi järgi
 filter-by-visibility=Filter by Visibility (Automatic Copy)
+filter-by-x=Filter by {0} (Automatic Copy)
 filter-collection=Filter Collection (Automatic Copy)
 filter-contacts=Kontaktide filtreerimine (Automatic Translation)
 filter-field=Filtriväli (Automatic Translation)
