--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
@@ -2836,6 +2836,7 @@ category.dynamic-data-lists=لیست داده های پویا
 category.dynamic-data-mapping=نقشه داده پویا
 category.email=پست الکترونیک
 category.entertainment=سرگرمی
+category.feature-flags=Feature Flags (Automatic Copy)
 category.file-storage=ذخیره سازی فایل
 category.finance=مالی
 category.form-navigator-extensions=الحاقات ناوبر فرم (Automatic Translation)
@@ -3997,6 +3998,7 @@ could-not-connect-to-address-x.-please-verify-that-the-specified-port-is-correct
 could-not-connect-to-the-database.-please-verify-that-the-settings-are-correct=نمی توانست به پایگاه داده متصل شود. لطفاً تأیید کنید که تنظیمات درست هستند. (Automatic Translation)
 could-not-connect-to-the-liferay-marketplace=قادر به اتصال به مارکت لایفری نمی‌باشد.
 could-not-save-draft-to-the-server=امکان ذخیره‌ی پیش‌نویس وجود ندارد.
+could-not-update-feature-flag=Could not update feature flag. (Automatic Copy)
 count=تعداد
 counters=شمارنده
 countries=کشورها
@@ -6591,6 +6593,12 @@ favorites=علاقه ها
 fax=فکس
 fax-number=شماره فکس
 fbml=FBML (Automatic Translation)
+feature.flag.status.description.beta=Beta features are experimental and not supported. Use with caution. (Automatic Copy)
+feature.flag.status.description.dev=Developer features are under active development. Do not activate unless you are on a development instance of DXP. (Automatic Copy)
+feature.flag.status.description.release=Release features provide an easy way to onboard new functionality in DXP. They are fully supported and can be activated individually and progressively. (Automatic Copy)
+feature.flag.status.title.beta=Beta (Automatic Copy)
+feature.flag.status.title.dev=Developer (Automatic Copy)
+feature.flag.status.title.release=Release (Automatic Copy)
 featured=مخصوص
 featured-content=مطالب ویژه
 featured-image=تصویر ویژه
@@ -6796,6 +6804,7 @@ filter-by-type=فیلتر بر اساس نوع (Automatic Translation)
 filter-by-user=فیلتر توسط کاربر
 filter-by-user-group=فیلتر شده توسط گروه کاربر
 filter-by-visibility=Filter by Visibility (Automatic Copy)
+filter-by-x=Filter by {0} (Automatic Copy)
 filter-collection=Filter Collection (Automatic Copy)
 filter-contacts=فیلتر مخاطبان
 filter-field=فیلد فیلتر
