--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -2836,6 +2836,7 @@ category.dynamic-data-lists=Dynaamiset Dataluettelot
 category.dynamic-data-mapping=Dynaaminen Datan Yhdistäminen
 category.email=Sähköposti
 category.entertainment=Viihde
+category.feature-flags=Feature Flags (Automatic Copy)
 category.file-storage=Tiedoston Tallennus
 category.finance=Talous
 category.form-navigator-extensions=Lomakkeiden siirtymislaajennukset
@@ -3997,6 +3998,7 @@ could-not-connect-to-address-x.-please-verify-that-the-specified-port-is-correct
 could-not-connect-to-the-database.-please-verify-that-the-settings-are-correct=Ei voitu muodostaa yhteyttä tietokantaan. Varmista, että asetukset ovat oikein.
 could-not-connect-to-the-liferay-marketplace=Liferayn markkinapaikkaan ei saada yhteyttä.
 could-not-save-draft-to-the-server=Vedosta ei voitu tallentaa palvelimelle.
+could-not-update-feature-flag=Could not update feature flag. (Automatic Copy)
 count=Määrä
 counters=Laskurit
 countries=Maat
@@ -6591,6 +6593,12 @@ favorites=Suosikit
 fax=Faksi
 fax-number=Faksinumero
 fbml=FBML
+feature.flag.status.description.beta=Beta features are experimental and not supported. Use with caution. (Automatic Copy)
+feature.flag.status.description.dev=Developer features are under active development. Do not activate unless you are on a development instance of DXP. (Automatic Copy)
+feature.flag.status.description.release=Release features provide an easy way to onboard new functionality in DXP. They are fully supported and can be activated individually and progressively. (Automatic Copy)
+feature.flag.status.title.beta=Beta (Automatic Copy)
+feature.flag.status.title.dev=Developer (Automatic Copy)
+feature.flag.status.title.release=Release (Automatic Copy)
 featured=Ajankohtaista
 featured-content=Esillä oleva Sisältö
 featured-image=Ajankohtainen Kuva
@@ -6796,6 +6804,7 @@ filter-by-type=Suodata Tyypin perusteella
 filter-by-user=Suodata käyttäjän mukaan
 filter-by-user-group=Suodata käyttäjäryhmien mukaan
 filter-by-visibility=Suodata näkyvyyden mukaan
+filter-by-x=Filter by {0} (Automatic Copy)
 filter-collection=Suodatuskokoelma
 filter-contacts=Suodata yhteystietoja
 filter-field=Suodatinkenttä
