--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
@@ -2836,6 +2836,7 @@ category.dynamic-data-lists=Listes des données dynamiques
 category.dynamic-data-mapping=Mappage des données dynamiques
 category.email=E-mail
 category.entertainment=Divertissement
+category.feature-flags=Feature Flags (Automatic Copy)
 category.file-storage=Stockage de fichiers
 category.finance=Finances
 category.form-navigator-extensions=Extensions du navigateur de formulaires
@@ -3997,6 +3998,7 @@ could-not-connect-to-address-x.-please-verify-that-the-specified-port-is-correct
 could-not-connect-to-the-database.-please-verify-that-the-settings-are-correct=Connexion à la base de données impossible. Veuillez vérifier que les paramètres soient corrects.
 could-not-connect-to-the-liferay-marketplace=Impossible de se connecter au Market Place Liferay.
 could-not-save-draft-to-the-server=N'a pas pu sauver l'ébauche au serveur.
+could-not-update-feature-flag=Could not update feature flag. (Automatic Copy)
 count=Compter
 counters=Pays
 countries=Pays
@@ -6591,6 +6593,12 @@ favorites=Favoris
 fax=Fax
 fax-number=Numéro de fax
 fbml=FBML
+feature.flag.status.description.beta=Beta features are experimental and not supported. Use with caution. (Automatic Copy)
+feature.flag.status.description.dev=Developer features are under active development. Do not activate unless you are on a development instance of DXP. (Automatic Copy)
+feature.flag.status.description.release=Release features provide an easy way to onboard new functionality in DXP. They are fully supported and can be activated individually and progressively. (Automatic Copy)
+feature.flag.status.title.beta=Beta (Automatic Copy)
+feature.flag.status.title.dev=Developer (Automatic Copy)
+feature.flag.status.title.release=Release (Automatic Copy)
 featured=Personnalisé
 featured-content=Contenu sélectionné
 featured-image=Image à la une
@@ -6796,6 +6804,7 @@ filter-by-type=Filtrer par type
 filter-by-user=Filtre par User
 filter-by-user-group=Filtre par le Groupe d'utilisateurs
 filter-by-visibility=Filter by Visibility (Automatic Copy)
+filter-by-x=Filter by {0} (Automatic Copy)
 filter-collection=Filtrer la collection
 filter-contacts=Filtrer les contacts
 filter-field=Champ filtre
