--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -2836,6 +2836,7 @@ category.dynamic-data-lists=Dinamikus adatlista
 category.dynamic-data-mapping=Dinamikus adat-hozzárendelés
 category.email=E-mail
 category.entertainment=Szórakozás
+category.feature-flags=Feature Flags (Automatic Copy)
 category.file-storage=Fájltárolás
 category.finance=Pénzügy
 category.form-navigator-extensions=Űrlap navigátor kiterjesztései
@@ -3997,6 +3998,7 @@ could-not-connect-to-address-x.-please-verify-that-the-specified-port-is-correct
 could-not-connect-to-the-database.-please-verify-that-the-settings-are-correct=Nem sikerült kapcsolódni az adatbázishoz. Ellenőrizze, hogy helyesek-e a beállítások.
 could-not-connect-to-the-liferay-marketplace=Nem lehetséges a Liferay Marketplace-hez kapcsolódni.
 could-not-save-draft-to-the-server=Nem lehetett elmenteni a piszkozatot a szerverre.
+could-not-update-feature-flag=Could not update feature flag. (Automatic Copy)
 count=Számláló
 counters=Számlálók
 countries=Országok
@@ -6591,6 +6593,12 @@ favorites=Kedvencek
 fax=Fax
 fax-number=Faxszám
 fbml=FBML
+feature.flag.status.description.beta=Beta features are experimental and not supported. Use with caution. (Automatic Copy)
+feature.flag.status.description.dev=Developer features are under active development. Do not activate unless you are on a development instance of DXP. (Automatic Copy)
+feature.flag.status.description.release=Release features provide an easy way to onboard new functionality in DXP. They are fully supported and can be activated individually and progressively. (Automatic Copy)
+feature.flag.status.title.beta=Beta (Automatic Copy)
+feature.flag.status.title.dev=Developer (Automatic Copy)
+feature.flag.status.title.release=Release (Automatic Copy)
 featured=Kiemelt
 featured-content=Kiemelt tartalom
 featured-image=Kiemelt kép
@@ -6796,6 +6804,7 @@ filter-by-type=Szűrés típus szerint
 filter-by-user=Szűrés felhasználó szerint
 filter-by-user-group=Szűrés felhasználói csoport szerint
 filter-by-visibility=Szűrés láthatóság szerint
+filter-by-x=Filter by {0} (Automatic Copy)
 filter-collection=Gyűjtemény szűrése
 filter-contacts=Kapcsolatok szűrése
 filter-field=Szűrőmező
