--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
@@ -2836,6 +2836,7 @@ category.dynamic-data-lists=Daftar Data Dinamis (Automatic Translation)
 category.dynamic-data-mapping=Pemetaan Data Dinamis (Automatic Translation)
 category.email=Email (Automatic Translation)
 category.entertainment=Hiburan
+category.feature-flags=Feature Flags (Automatic Copy)
 category.file-storage=Penyimpanan File (Automatic Translation)
 category.finance=Keuangan
 category.form-navigator-extensions=Ekstensi Navigator Formulir (Automatic Translation)
@@ -3997,6 +3998,7 @@ could-not-connect-to-address-x.-please-verify-that-the-specified-port-is-correct
 could-not-connect-to-the-database.-please-verify-that-the-settings-are-correct=Tak bisa tersambung ke basis data. Pastikan bahwa setelan tersebut sudah benar. (Automatic Translation)
 could-not-connect-to-the-liferay-marketplace=Tidak dapat terhubung ke Marketplace Liferay.
 could-not-save-draft-to-the-server=Tidak dapat menyimpan konsep ke server.
+could-not-update-feature-flag=Could not update feature flag. (Automatic Copy)
 count=Menghitung (Automatic Translation)
 counters=Negara
 countries=Negara (Automatic Translation)
@@ -6591,6 +6593,12 @@ favorites=Favorit
 fax=Faks (Automatic Translation)
 fax-number=Nomor Fax
 fbml=FBML (Automatic Translation)
+feature.flag.status.description.beta=Beta features are experimental and not supported. Use with caution. (Automatic Copy)
+feature.flag.status.description.dev=Developer features are under active development. Do not activate unless you are on a development instance of DXP. (Automatic Copy)
+feature.flag.status.description.release=Release features provide an easy way to onboard new functionality in DXP. They are fully supported and can be activated individually and progressively. (Automatic Copy)
+feature.flag.status.title.beta=Beta (Automatic Copy)
+feature.flag.status.title.dev=Developer (Automatic Copy)
+feature.flag.status.title.release=Release (Automatic Copy)
 featured=Feature
 featured-content=Konten Unggulan (Automatic Translation)
 featured-image=Gambar Unggulan (Automatic Translation)
@@ -6796,6 +6804,7 @@ filter-by-type=Filter menurut Tipe (Automatic Translation)
 filter-by-user=Filter oleh Pengguna
 filter-by-user-group=Filter menurut Grup Pengguna
 filter-by-visibility=Filter by Visibility (Automatic Copy)
+filter-by-x=Filter by {0} (Automatic Copy)
 filter-collection=Filter Collection (Automatic Copy)
 filter-contacts=Filter Kontak
 filter-field=Bidang Filter (Automatic Translation)
