--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
@@ -2835,6 +2835,7 @@ category.dynamic-data-lists=Liste Dati Dinamici
 category.dynamic-data-mapping=Mapping Dati Dinamici
 category.email=E-mail (Automatic Translation)
 category.entertainment=Intrattenimento
+category.feature-flags=Feature Flags (Automatic Copy)
 category.file-storage=Archiviazione File
 category.finance=Finanza
 category.form-navigator-extensions=Estensioni navigatore modulo (Automatic Translation)
@@ -3996,6 +3997,7 @@ could-not-connect-to-address-x.-please-verify-that-the-specified-port-is-correct
 could-not-connect-to-the-database.-please-verify-that-the-settings-are-correct=Impossibile connettersi al database. Verificare che le impostazioni siano corrette. (Automatic Translation)
 could-not-connect-to-the-liferay-marketplace=Collegamento al Marketplace Liferay non riuscito.
 could-not-save-draft-to-the-server=Non è stato possibile salvare la bozza nel server.
+could-not-update-feature-flag=Could not update feature flag. (Automatic Copy)
 count=Conteggio
 counters=Contatori
 countries=Paesi (Automatic Translation)
@@ -6590,6 +6592,12 @@ favorites=Segnalibri
 fax=fax (Automatic Translation)
 fax-number=Numero di Fax
 fbml=FBML (Automatic Translation)
+feature.flag.status.description.beta=Beta features are experimental and not supported. Use with caution. (Automatic Copy)
+feature.flag.status.description.dev=Developer features are under active development. Do not activate unless you are on a development instance of DXP. (Automatic Copy)
+feature.flag.status.description.release=Release features provide an easy way to onboard new functionality in DXP. They are fully supported and can be activated individually and progressively. (Automatic Copy)
+feature.flag.status.title.beta=Beta (Automatic Copy)
+feature.flag.status.title.dev=Developer (Automatic Copy)
+feature.flag.status.title.release=Release (Automatic Copy)
 featured=Descritto
 featured-content=Contenuti in primo piano (Automatic Translation)
 featured-image=Immagine in primo piano (Automatic Translation)
@@ -6795,6 +6803,7 @@ filter-by-type=Filtra per Tipo
 filter-by-user=Filtra per Utente
 filter-by-user-group=Filtra per Gruppo Utenti
 filter-by-visibility=Filter by Visibility (Automatic Copy)
+filter-by-x=Filter by {0} (Automatic Copy)
 filter-collection=Filter Collection (Automatic Copy)
 filter-contacts=Filtra Contatti
 filter-field=Campo filtro (Automatic Translation)
