--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
@@ -2836,6 +2836,7 @@ category.dynamic-data-lists=다이나믹 데이터 목록
 category.dynamic-data-mapping=다이나믹 데이터 맵핑
 category.email=이메일
 category.entertainment=오락
+category.feature-flags=Feature Flags (Automatic Copy)
 category.file-storage=파일 스토리지
 category.finance=경리
 category.form-navigator-extensions=폼 네비게이션 확장
@@ -3997,6 +3998,7 @@ could-not-connect-to-address-x.-please-verify-that-the-specified-port-is-correct
 could-not-connect-to-the-database.-please-verify-that-the-settings-are-correct=데이터베이스에 연결할 수 없습니다. 설정이 맞는지 확인하십시오.
 could-not-connect-to-the-liferay-marketplace=라이프레이 마켓플레이스에 연결할 수 없습니다.
 could-not-save-draft-to-the-server=서버에 초안을 저장할 수 없었다.
+could-not-update-feature-flag=Could not update feature flag. (Automatic Copy)
 count=카운트
 counters=나라
 countries=국가
@@ -6591,6 +6593,12 @@ favorites=마음에 드는 것
 fax=팩스
 fax-number=팩스 수
 fbml=FBML
+feature.flag.status.description.beta=Beta features are experimental and not supported. Use with caution. (Automatic Copy)
+feature.flag.status.description.dev=Developer features are under active development. Do not activate unless you are on a development instance of DXP. (Automatic Copy)
+feature.flag.status.description.release=Release features provide an easy way to onboard new functionality in DXP. They are fully supported and can be activated individually and progressively. (Automatic Copy)
+feature.flag.status.title.beta=Beta (Automatic Copy)
+feature.flag.status.title.dev=Developer (Automatic Copy)
+feature.flag.status.title.release=Release (Automatic Copy)
 featured=특색짓는
 featured-content=추천 컨텐츠
 featured-image=추천 이미지
@@ -6796,6 +6804,7 @@ filter-by-type=유형으로 필터링
 filter-by-user=사용자로 필터링
 filter-by-user-group=사용자 그룹 에의한 여과기
 filter-by-visibility=보기로 필터링
+filter-by-x=Filter by {0} (Automatic Copy)
 filter-collection=콜렉션 필터링
 filter-contacts=연락처 필터링
 filter-field=필드 필터링
