--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lo.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lo.properties
@@ -2836,6 +2836,7 @@ category.dynamic-data-lists=Dynamic Data Lists (Automatic Copy)
 category.dynamic-data-mapping=Dynamic Data Mapping (Automatic Copy)
 category.email=Email (Automatic Copy)
 category.entertainment=ບັນເທິງ
+category.feature-flags=Feature Flags (Automatic Copy)
 category.file-storage=File Storage (Automatic Copy)
 category.finance=ການເງິນ
 category.form-navigator-extensions=Form Navigator Extensions (Automatic Copy)
@@ -3997,6 +3998,7 @@ could-not-connect-to-address-x.-please-verify-that-the-specified-port-is-correct
 could-not-connect-to-the-database.-please-verify-that-the-settings-are-correct=Could not connect to the database. Please verify that the settings are correct. (Automatic Copy)
 could-not-connect-to-the-liferay-marketplace=Could not connect to the Liferay Marketplace. (Automatic Copy)
 could-not-save-draft-to-the-server=ບໍ່ສາມາດຈັດເກັບຮ່າງລົງເຊີເວີ້
+could-not-update-feature-flag=Could not update feature flag. (Automatic Copy)
 count=Count (Automatic Copy)
 counters=ເຄື່ອງນັບຈຳນວນ
 countries=Countries (Automatic Copy)
@@ -6591,6 +6593,12 @@ favorites=ຍອດຮິດ
 fax=ແຟ໋ກ
 fax-number=ໝາຍເລກແຟ໋ກ
 fbml=ເອັບອີເມັມແອວ
+feature.flag.status.description.beta=Beta features are experimental and not supported. Use with caution. (Automatic Copy)
+feature.flag.status.description.dev=Developer features are under active development. Do not activate unless you are on a development instance of DXP. (Automatic Copy)
+feature.flag.status.description.release=Release features provide an easy way to onboard new functionality in DXP. They are fully supported and can be activated individually and progressively. (Automatic Copy)
+feature.flag.status.title.beta=Beta (Automatic Copy)
+feature.flag.status.title.dev=Developer (Automatic Copy)
+feature.flag.status.title.release=Release (Automatic Copy)
 featured=ລັກສະນະ
 featured-content=Featured Content (Automatic Copy)
 featured-image=Featured Image (Automatic Copy)
@@ -6796,6 +6804,7 @@ filter-by-type=Filter by Type (Automatic Copy)
 filter-by-user=ກັນຕອງຕາມຜູ້ໃຊ້
 filter-by-user-group=ກັນຕອງຕາມກຸ່ມຜູ້ໃຊ້
 filter-by-visibility=Filter by Visibility (Automatic Copy)
+filter-by-x=Filter by {0} (Automatic Copy)
 filter-collection=Filter Collection (Automatic Copy)
 filter-contacts=Filter Contacts (Automatic Copy)
 filter-field=Filter Field (Automatic Copy)
