--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
@@ -2836,6 +2836,7 @@ category.dynamic-data-lists=Dinaminiai duomenų sąrašai (Automatic Translation
 category.dynamic-data-mapping=Dinaminis duomenų susiejimas (Automatic Translation)
 category.email=El paštas (Automatic Translation)
 category.entertainment=Pramogų (Automatic Translation)
+category.feature-flags=Feature Flags (Automatic Copy)
 category.file-storage=Failų saugykla (Automatic Translation)
 category.finance=Finansų (Automatic Translation)
 category.form-navigator-extensions=Formų naršyklės plėtiniai (Automatic Translation)
@@ -3997,6 +3998,7 @@ could-not-connect-to-address-x.-please-verify-that-the-specified-port-is-correct
 could-not-connect-to-the-database.-please-verify-that-the-settings-are-correct=Nepavyko prisijungti prie duomenų bazės. Patikrinkite, ar parametrai teisingi. (Automatic Translation)
 could-not-connect-to-the-liferay-marketplace=Nepavyko prisijungti prie "Liferay Marketplace". (Automatic Translation)
 could-not-save-draft-to-the-server=Nepavyko įrašyti juodraščio į serverį. (Automatic Translation)
+could-not-update-feature-flag=Could not update feature flag. (Automatic Copy)
 count=Skaičius (Automatic Translation)
 counters=Skaitikliai (Automatic Translation)
 countries=Šalių (Automatic Translation)
@@ -6591,6 +6593,12 @@ favorites=Parankinių (Automatic Translation)
 fax=Fakso (Automatic Translation)
 fax-number=Fakso numeris (Automatic Translation)
 fbml=FBML (Automatic Translation)
+feature.flag.status.description.beta=Beta features are experimental and not supported. Use with caution. (Automatic Copy)
+feature.flag.status.description.dev=Developer features are under active development. Do not activate unless you are on a development instance of DXP. (Automatic Copy)
+feature.flag.status.description.release=Release features provide an easy way to onboard new functionality in DXP. They are fully supported and can be activated individually and progressively. (Automatic Copy)
+feature.flag.status.title.beta=Beta (Automatic Copy)
+feature.flag.status.title.dev=Developer (Automatic Copy)
+feature.flag.status.title.release=Release (Automatic Copy)
 featured=Rekomenduojami (Automatic Translation)
 featured-content=Teminis turinys (Automatic Translation)
 featured-image=Teminis vaizdas (Automatic Translation)
@@ -6796,6 +6804,7 @@ filter-by-type=Filtruoti pagal tipą (Automatic Translation)
 filter-by-user=Filtruoti pagal vartotoją (Automatic Translation)
 filter-by-user-group=Filtruoti pagal vartotojų grupę (Automatic Translation)
 filter-by-visibility=Filter by Visibility (Automatic Copy)
+filter-by-x=Filter by {0} (Automatic Copy)
 filter-collection=Filter Collection (Automatic Copy)
 filter-contacts=Filtruoti kontaktus (Automatic Translation)
 filter-field=Filtro laukas (Automatic Translation)
