--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
@@ -2836,6 +2836,7 @@ category.dynamic-data-lists=Senarai Data Dinamik (Automatic Translation)
 category.dynamic-data-mapping=Pemetaan Data Dinamik (Automatic Translation)
 category.email=E-mel (Automatic Translation)
 category.entertainment=Hiburan
+category.feature-flags=Feature Flags (Automatic Copy)
 category.file-storage=Storan Fail (Automatic Translation)
 category.finance=Kewangan
 category.form-navigator-extensions=Sambungan Navigator Borang (Automatic Translation)
@@ -3997,6 +3998,7 @@ could-not-connect-to-address-x.-please-verify-that-the-specified-port-is-correct
 could-not-connect-to-the-database.-please-verify-that-the-settings-are-correct=Tidak dapat menyambung ke pangkalan data. Sila tentu sah seting adalah betul. (Automatic Translation)
 could-not-connect-to-the-liferay-marketplace=Tidak dapat menyambung ke Liferay Marketplace. (Automatic Translation)
 could-not-save-draft-to-the-server=Tidak dapat menyimpan draf ke pelayan. (Automatic Translation)
+could-not-update-feature-flag=Could not update feature flag. (Automatic Copy)
 count=Kiraan (Automatic Translation)
 counters=Kaunter (Automatic Translation)
 countries=Negara (Automatic Translation)
@@ -6591,6 +6593,12 @@ favorites=Kegemaran (Automatic Translation)
 fax=Faks (Automatic Translation)
 fax-number=Nombor Faks (Automatic Translation)
 fbml=FBML (Automatic Translation)
+feature.flag.status.description.beta=Beta features are experimental and not supported. Use with caution. (Automatic Copy)
+feature.flag.status.description.dev=Developer features are under active development. Do not activate unless you are on a development instance of DXP. (Automatic Copy)
+feature.flag.status.description.release=Release features provide an easy way to onboard new functionality in DXP. They are fully supported and can be activated individually and progressively. (Automatic Copy)
+feature.flag.status.title.beta=Beta (Automatic Copy)
+feature.flag.status.title.dev=Developer (Automatic Copy)
+feature.flag.status.title.release=Release (Automatic Copy)
 featured=Diketengahkan (Automatic Translation)
 featured-content=Kandungan Yang Diketengahkan (Automatic Translation)
 featured-image=Imej Yang Diketengahkan (Automatic Translation)
@@ -6796,6 +6804,7 @@ filter-by-type=Tapis mengikut Jenis (Automatic Translation)
 filter-by-user=Tapis mengikut Pengguna (Automatic Translation)
 filter-by-user-group=Tapis mengikut Kumpulan Pengguna (Automatic Translation)
 filter-by-visibility=Filter by Visibility (Automatic Copy)
+filter-by-x=Filter by {0} (Automatic Copy)
 filter-collection=Filter Collection (Automatic Copy)
 filter-contacts=Tapis Kenalan (Automatic Translation)
 filter-field=Medan Penapis (Automatic Translation)
