--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -2836,6 +2836,7 @@ category.dynamic-data-lists=Dynamische datalijsten
 category.dynamic-data-mapping=Dynamische datatoewijzing
 category.email=E-mail
 category.entertainment=Amusement
+category.feature-flags=Feature Flags (Automatic Copy)
 category.file-storage=Opslag van bestanden
 category.finance=Financiën
 category.form-navigator-extensions=Navigatorextensies formulier
@@ -3997,6 +3998,7 @@ could-not-connect-to-address-x.-please-verify-that-the-specified-port-is-correct
 could-not-connect-to-the-database.-please-verify-that-the-settings-are-correct=Geen verbinding mogelijk met de database. Controleer of de instellingen juist zijn.
 could-not-connect-to-the-liferay-marketplace=Er kon geen verbinding worden gemaakt met Liferay Marketplace.
 could-not-save-draft-to-the-server=Opslaan van concept mislukt.
+could-not-update-feature-flag=Could not update feature flag. (Automatic Copy)
 count=Tellen
 counters=Tellers
 countries=Landen
@@ -6591,6 +6593,12 @@ favorites=Favorieten
 fax=Fax
 fax-number=Faxnummer
 fbml=FBML
+feature.flag.status.description.beta=Beta features are experimental and not supported. Use with caution. (Automatic Copy)
+feature.flag.status.description.dev=Developer features are under active development. Do not activate unless you are on a development instance of DXP. (Automatic Copy)
+feature.flag.status.description.release=Release features provide an easy way to onboard new functionality in DXP. They are fully supported and can be activated individually and progressively. (Automatic Copy)
+feature.flag.status.title.beta=Beta (Automatic Copy)
+feature.flag.status.title.dev=Developer (Automatic Copy)
+feature.flag.status.title.release=Release (Automatic Copy)
 featured=Aanbevolen
 featured-content=Uitgelichte inhoud
 featured-image=Uitgelichte afbeelding
@@ -6796,6 +6804,7 @@ filter-by-type=Filteren op type
 filter-by-user=Op gebruiker filteren
 filter-by-user-group=Op gebruikersgroep filteren
 filter-by-visibility=Filteren op zichtbaarheid
+filter-by-x=Filter by {0} (Automatic Copy)
 filter-collection=Filtercollectie
 filter-contacts=Contactpersonen filteren
 filter-field=Filterveld
