--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
@@ -2836,6 +2836,7 @@ category.dynamic-data-lists=Dynamiczne listy danych (Automatic Translation)
 category.dynamic-data-mapping=Dynamiczne mapowanie danych (Automatic Translation)
 category.email=E-mail (Automatic Translation)
 category.entertainment=Rozrywka
+category.feature-flags=Feature Flags (Automatic Copy)
 category.file-storage=Przechowywanie plików (Automatic Translation)
 category.finance=Finanse
 category.form-navigator-extensions=Rozszerzenia nawigatora formularzy (Automatic Translation)
@@ -3997,6 +3998,7 @@ could-not-connect-to-address-x.-please-verify-that-the-specified-port-is-correct
 could-not-connect-to-the-database.-please-verify-that-the-settings-are-correct=Nie można połączyć się z bazą danych. Sprawdź, czy ustawienia są poprawne. (Automatic Translation)
 could-not-connect-to-the-liferay-marketplace=Problem z połączeniem ze sklepem Liferay.
 could-not-save-draft-to-the-server=Zapisywanie szkicu na serwerze nie powiodło się.
+could-not-update-feature-flag=Could not update feature flag. (Automatic Copy)
 count=Policz
 counters=Liczniki
 countries=Krajach (Automatic Translation)
@@ -6591,6 +6593,12 @@ favorites=Ulubione
 fax=Faks
 fax-number=Numer faksu
 fbml=Fbml (Automatic Translation)
+feature.flag.status.description.beta=Beta features are experimental and not supported. Use with caution. (Automatic Copy)
+feature.flag.status.description.dev=Developer features are under active development. Do not activate unless you are on a development instance of DXP. (Automatic Copy)
+feature.flag.status.description.release=Release features provide an easy way to onboard new functionality in DXP. They are fully supported and can be activated individually and progressively. (Automatic Copy)
+feature.flag.status.title.beta=Beta (Automatic Copy)
+feature.flag.status.title.dev=Developer (Automatic Copy)
+feature.flag.status.title.release=Release (Automatic Copy)
 featured=Promowane
 featured-content=Polecane treści (Automatic Translation)
 featured-image=Wyróżniony Obraz
@@ -6796,6 +6804,7 @@ filter-by-type=Filtruj według typu (Automatic Translation)
 filter-by-user=Filtruj według użytkownika
 filter-by-user-group=Filtruj według grupy użytkownika
 filter-by-visibility=Filter by Visibility (Automatic Copy)
+filter-by-x=Filter by {0} (Automatic Copy)
 filter-collection=Filter Collection (Automatic Copy)
 filter-contacts=Filtruj kontakty
 filter-field=Pole filtru (Automatic Translation)
