--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -2836,6 +2836,7 @@ category.dynamic-data-lists=Listas de Dados Dinâmicos
 category.dynamic-data-mapping=Mapeamento de Dados Dinâmicos
 category.email=E-mail
 category.entertainment=Entretenimento
+category.feature-flags=Feature Flags (Automatic Copy)
 category.file-storage=Armazenamento de Arquivos
 category.finance=Finanças
 category.form-navigator-extensions=Para extensões do navegador
@@ -3997,6 +3998,7 @@ could-not-connect-to-address-x.-please-verify-that-the-specified-port-is-correct
 could-not-connect-to-the-database.-please-verify-that-the-settings-are-correct=Não foi possível conectar ao banco de dados. Por favor, verifique se as configurações estão corretas.
 could-not-connect-to-the-liferay-marketplace=Não foi possível conectar ao Liferay Marketplace.
 could-not-save-draft-to-the-server=Não foi possível salvar o rascunho no servidor.
+could-not-update-feature-flag=Could not update feature flag. (Automatic Copy)
 count=Quantidade
 counters=Contadores
 countries=Países
@@ -6591,6 +6593,12 @@ favorites=Favoritos
 fax=Fax
 fax-number=Número de fax
 fbml=FBML
+feature.flag.status.description.beta=Beta features are experimental and not supported. Use with caution. (Automatic Copy)
+feature.flag.status.description.dev=Developer features are under active development. Do not activate unless you are on a development instance of DXP. (Automatic Copy)
+feature.flag.status.description.release=Release features provide an easy way to onboard new functionality in DXP. They are fully supported and can be activated individually and progressively. (Automatic Copy)
+feature.flag.status.title.beta=Beta (Automatic Copy)
+feature.flag.status.title.dev=Developer (Automatic Copy)
+feature.flag.status.title.release=Release (Automatic Copy)
 featured=Promoção
 featured-content=Conteúdo em destaque
 featured-image=Imagem em destaque
@@ -6796,6 +6804,7 @@ filter-by-type=Filtrar por tipo
 filter-by-user=Filtrar por usuário
 filter-by-user-group=Filtrar por Grupo de Usuário
 filter-by-visibility=Filtrar por visibilidade
+filter-by-x=Filter by {0} (Automatic Copy)
 filter-collection=Filtrar Coleção
 filter-contacts=Filtrar contatos
 filter-field=Campo de filtro
