--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
@@ -2836,6 +2836,7 @@ category.dynamic-data-lists=Liste de date dinamice (Automatic Translation)
 category.dynamic-data-mapping=Mapare dinamică date (Automatic Translation)
 category.email=E-mail (Automatic Translation)
 category.entertainment=Divertisment
+category.feature-flags=Feature Flags (Automatic Copy)
 category.file-storage=Stocare fișiere (Automatic Translation)
 category.finance=Finanțe
 category.form-navigator-extensions=Extensii Navigator formular (Automatic Translation)
@@ -3997,6 +3998,7 @@ could-not-connect-to-address-x.-please-verify-that-the-specified-port-is-correct
 could-not-connect-to-the-database.-please-verify-that-the-settings-are-correct=Imposibil de conectat la baza de date. Verificați dacă setările sunt corecte. (Automatic Translation)
 could-not-connect-to-the-liferay-marketplace=Imposibil de conectat la Piața Liferay. (Automatic Translation)
 could-not-save-draft-to-the-server=Nu s-a putut salva schița pe server.
+could-not-update-feature-flag=Could not update feature flag. (Automatic Copy)
 count=Conta (Automatic Translation)
 counters=Țară
 countries=țări (Automatic Translation)
@@ -6591,6 +6593,12 @@ favorites=Favorite
 fax=Fax (Automatic Translation)
 fax-number=Număr Fax
 fbml=Fbml (Automatic Translation)
+feature.flag.status.description.beta=Beta features are experimental and not supported. Use with caution. (Automatic Copy)
+feature.flag.status.description.dev=Developer features are under active development. Do not activate unless you are on a development instance of DXP. (Automatic Copy)
+feature.flag.status.description.release=Release features provide an easy way to onboard new functionality in DXP. They are fully supported and can be activated individually and progressively. (Automatic Copy)
+feature.flag.status.title.beta=Beta (Automatic Copy)
+feature.flag.status.title.dev=Developer (Automatic Copy)
+feature.flag.status.title.release=Release (Automatic Copy)
 featured=Afișate
 featured-content=Conținut recomandat (Automatic Translation)
 featured-image=Imagine prezentată (Automatic Translation)
@@ -6796,6 +6804,7 @@ filter-by-type=Filtrare după tip (Automatic Translation)
 filter-by-user=Filtrează după Utilizator
 filter-by-user-group=Filtrează după Grupul de Utilizatori
 filter-by-visibility=Filter by Visibility (Automatic Copy)
+filter-by-x=Filter by {0} (Automatic Copy)
 filter-collection=Filter Collection (Automatic Copy)
 filter-contacts=Filtrare persoane de contact (Automatic Translation)
 filter-field=Câmp filtru (Automatic Translation)
