--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
@@ -2836,6 +2836,7 @@ category.dynamic-data-lists=Динамические списки данных (
 category.dynamic-data-mapping=Динамическое картирование данных (Automatic Translation)
 category.email=Электронная почта (Automatic Translation)
 category.entertainment=Развлечения
+category.feature-flags=Feature Flags (Automatic Copy)
 category.file-storage=Хранение файлов (Automatic Translation)
 category.finance=Финансы
 category.form-navigator-extensions=Формирование расширения навигатора (Automatic Translation)
@@ -3997,6 +3998,7 @@ could-not-connect-to-address-x.-please-verify-that-the-specified-port-is-correct
 could-not-connect-to-the-database.-please-verify-that-the-settings-are-correct=Не смог подключиться к базе данных. Пожалуйста, убедитесь, что настройки верны. (Automatic Translation)
 could-not-connect-to-the-liferay-marketplace=Невозможно подключиться к Liferay Marketplace.
 could-not-save-draft-to-the-server=Не удалось сохранить черновик на сервер.
+could-not-update-feature-flag=Could not update feature flag. (Automatic Copy)
 count=Количество
 counters=Счетчики
 countries=Стран (Automatic Translation)
@@ -6591,6 +6593,12 @@ favorites=Любимое
 fax=Факс
 fax-number=Номер факса
 fbml=FBML (Automatic Translation)
+feature.flag.status.description.beta=Beta features are experimental and not supported. Use with caution. (Automatic Copy)
+feature.flag.status.description.dev=Developer features are under active development. Do not activate unless you are on a development instance of DXP. (Automatic Copy)
+feature.flag.status.description.release=Release features provide an easy way to onboard new functionality in DXP. They are fully supported and can be activated individually and progressively. (Automatic Copy)
+feature.flag.status.title.beta=Beta (Automatic Copy)
+feature.flag.status.title.dev=Developer (Automatic Copy)
+feature.flag.status.title.release=Release (Automatic Copy)
 featured=Специальное предложение
 featured-content=Рекомендуемый контент (Automatic Translation)
 featured-image=Рекомендуемое изображение (Automatic Translation)
@@ -6796,6 +6804,7 @@ filter-by-type=Фильтр по типу (Automatic Translation)
 filter-by-user=Фильтр по пользователю
 filter-by-user-group=Фильтр по группе пользователей
 filter-by-visibility=Filter by Visibility (Automatic Copy)
+filter-by-x=Filter by {0} (Automatic Copy)
 filter-collection=Filter Collection (Automatic Copy)
 filter-contacts=Фильтровать контакты
 filter-field=Поле фильтра (Automatic Translation)
