--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
@@ -2836,6 +2836,7 @@ category.dynamic-data-lists=Dinamični seznami podatkov (Automatic Translation)
 category.dynamic-data-mapping=Dinamično preslikavo podatkov (Automatic Translation)
 category.email=E-pošta (Automatic Translation)
 category.entertainment=Zabava
+category.feature-flags=Feature Flags (Automatic Copy)
 category.file-storage=Shranjevanje datotek (Automatic Translation)
 category.finance=Finance (Automatic Translation)
 category.form-navigator-extensions=Razširitve krmarja obrazca (Automatic Translation)
@@ -3997,6 +3998,7 @@ could-not-connect-to-address-x.-please-verify-that-the-specified-port-is-correct
 could-not-connect-to-the-database.-please-verify-that-the-settings-are-correct=Povezave z zbirko podatkov ni bilo mogoče vzpostaviti. Preverite, ali so nastavitve pravilne. (Automatic Translation)
 could-not-connect-to-the-liferay-marketplace=Povezave s tržnico Liferay ni bilo mogoče vzpostaviti. (Automatic Translation)
 could-not-save-draft-to-the-server=Ne morem shraniti osnutka na strežnik.
+could-not-update-feature-flag=Could not update feature flag. (Automatic Copy)
 count=Count (Automatic Translation)
 counters=Država
 countries=Držav (Automatic Translation)
@@ -6591,6 +6593,12 @@ favorites=Priljubljene
 fax=Faks (Automatic Translation)
 fax-number=Fax številka
 fbml=Fbml (Automatic Translation)
+feature.flag.status.description.beta=Beta features are experimental and not supported. Use with caution. (Automatic Copy)
+feature.flag.status.description.dev=Developer features are under active development. Do not activate unless you are on a development instance of DXP. (Automatic Copy)
+feature.flag.status.description.release=Release features provide an easy way to onboard new functionality in DXP. They are fully supported and can be activated individually and progressively. (Automatic Copy)
+feature.flag.status.title.beta=Beta (Automatic Copy)
+feature.flag.status.title.dev=Developer (Automatic Copy)
+feature.flag.status.title.release=Release (Automatic Copy)
 featured=Pojavljajoč
 featured-content=Priporočena vsebina (Automatic Translation)
 featured-image=Prikazana slika (Automatic Translation)
@@ -6796,6 +6804,7 @@ filter-by-type=Filtriraj po vrsti (Automatic Translation)
 filter-by-user=Filtriraj po uporabniku (Automatic Translation)
 filter-by-user-group=Filtriraj po skupini uporabnikov
 filter-by-visibility=Filter by Visibility (Automatic Copy)
+filter-by-x=Filter by {0} (Automatic Copy)
 filter-collection=Filter Collection (Automatic Copy)
 filter-contacts=Filtriraj stike (Automatic Translation)
 filter-field=Polje filtra (Automatic Translation)
