--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -2836,6 +2836,7 @@ category.dynamic-data-lists=Dynamiska datalistor
 category.dynamic-data-mapping=Dynamisk datamappning
 category.email=E-post
 category.entertainment=Underhållning
+category.feature-flags=Feature Flags (Automatic Copy)
 category.file-storage=Fillagring
 category.finance=Ekonomi
 category.form-navigator-extensions=Tillägg för formulärnavigatör
@@ -3997,6 +3998,7 @@ could-not-connect-to-address-x.-please-verify-that-the-specified-port-is-correct
 could-not-connect-to-the-database.-please-verify-that-the-settings-are-correct=Det går inte att ansluta till databasen. Verifiera att inställningarna är korrekta.
 could-not-connect-to-the-liferay-marketplace=Det gick inte att ansluta till Liferay Marketplace.
 could-not-save-draft-to-the-server=Kunde inte spara utkast på servern.
+could-not-update-feature-flag=Could not update feature flag. (Automatic Copy)
 count=Antal
 counters=Räknare
 countries=Länder
@@ -6591,6 +6593,12 @@ favorites=Favoriter
 fax=Fax
 fax-number=Faxnummer
 fbml=FBML
+feature.flag.status.description.beta=Beta features are experimental and not supported. Use with caution. (Automatic Copy)
+feature.flag.status.description.dev=Developer features are under active development. Do not activate unless you are on a development instance of DXP. (Automatic Copy)
+feature.flag.status.description.release=Release features provide an easy way to onboard new functionality in DXP. They are fully supported and can be activated individually and progressively. (Automatic Copy)
+feature.flag.status.title.beta=Beta (Automatic Copy)
+feature.flag.status.title.dev=Developer (Automatic Copy)
+feature.flag.status.title.release=Release (Automatic Copy)
 featured=Karaktäristiskt
 featured-content=Utvalt innehåll
 featured-image=Utvald bild
@@ -6796,6 +6804,7 @@ filter-by-type=Filtrera efter typ
 filter-by-user=Filtrera på användare
 filter-by-user-group=Filtrera på användargrupp
 filter-by-visibility=Filtrera efter synlighet
+filter-by-x=Filter by {0} (Automatic Copy)
 filter-collection=Filtrera samling
 filter-contacts=Filtrera kontakter
 filter-field=Filterfält
