--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
@@ -2836,6 +2836,7 @@ category.dynamic-data-lists=டைனமிக் Data Lists
 category.dynamic-data-mapping=டைனமிக் Data மேப்பிங்
 category.email=மின்னஞ்சல்
 category.entertainment=பொழுதுபோக்கு
+category.feature-flags=Feature Flags (Automatic Copy)
 category.file-storage=ஃபைல் சேமிக்குமிடம்
 category.finance=நிதி
 category.form-navigator-extensions=Form Navigator Extensions (Automatic Copy)
@@ -3997,6 +3998,7 @@ could-not-connect-to-address-x.-please-verify-that-the-specified-port-is-correct
 could-not-connect-to-the-database.-please-verify-that-the-settings-are-correct=Could not connect to the database. Please verify that the settings are correct. (Automatic Copy)
 could-not-connect-to-the-liferay-marketplace=Liferay சந்தையில் இணைக்க முடியவில்லை.
 could-not-save-draft-to-the-server=Server-ல் draft சேமிக்க முடியவில்லை.
+could-not-update-feature-flag=Could not update feature flag. (Automatic Copy)
 count=எண்ணிக்கை
 counters=கவுண்டர்கள்
 countries=Countries (Automatic Copy)
@@ -6591,6 +6593,12 @@ favorites=பிடித்தவை
 fax=தொலைநகல்
 fax-number=தொலைநகல் எண்
 fbml=FBML (Automatic Copy)
+feature.flag.status.description.beta=Beta features are experimental and not supported. Use with caution. (Automatic Copy)
+feature.flag.status.description.dev=Developer features are under active development. Do not activate unless you are on a development instance of DXP. (Automatic Copy)
+feature.flag.status.description.release=Release features provide an easy way to onboard new functionality in DXP. They are fully supported and can be activated individually and progressively. (Automatic Copy)
+feature.flag.status.title.beta=Beta (Automatic Copy)
+feature.flag.status.title.dev=Developer (Automatic Copy)
+feature.flag.status.title.release=Release (Automatic Copy)
 featured=சிறப்பானது
 featured-content=Featured Content (Automatic Copy)
 featured-image=Featured Image (Automatic Copy)
@@ -6796,6 +6804,7 @@ filter-by-type=Filter by Type (Automatic Copy)
 filter-by-user=User மூலமாக வடிகட்டவும்
 filter-by-user-group=User Group மூலமாக வடிகட்டவும்
 filter-by-visibility=Filter by Visibility (Automatic Copy)
+filter-by-x=Filter by {0} (Automatic Copy)
 filter-collection=Filter Collection (Automatic Copy)
 filter-contacts=தொடர்புகளை ஃபில்டர் செய்யவும்
 filter-field=Filter Field (Automatic Copy)
