--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
@@ -2836,6 +2836,7 @@ category.dynamic-data-lists=Динамічні списки даних (Automati
 category.dynamic-data-mapping=Динамічне зіставлення даних (Automatic Translation)
 category.email=Електронна пошта (Automatic Translation)
 category.entertainment=Розваги
+category.feature-flags=Feature Flags (Automatic Copy)
 category.file-storage=Сховище файлів (Automatic Translation)
 category.finance=Фінанси
 category.form-navigator-extensions=Розширення навігатора формами (Automatic Translation)
@@ -3997,6 +3998,7 @@ could-not-connect-to-address-x.-please-verify-that-the-specified-port-is-correct
 could-not-connect-to-the-database.-please-verify-that-the-settings-are-correct=Не вдалося підключитися до бази даних. Перевірте правильність параметрів. (Automatic Translation)
 could-not-connect-to-the-liferay-marketplace=Не вдалося підключитися до ринку Liferay. (Automatic Translation)
 could-not-save-draft-to-the-server=Не вдалося зберегти чорновик на сервер.
+could-not-update-feature-flag=Could not update feature flag. (Automatic Copy)
 count=Розраховувати (Automatic Translation)
 counters=Країна
 countries=Країн (Automatic Translation)
@@ -6591,6 +6593,12 @@ favorites=Улюблені артефакти
 fax=Факс
 fax-number=Номер факсу
 fbml=FBML (Івате) (Automatic Translation)
+feature.flag.status.description.beta=Beta features are experimental and not supported. Use with caution. (Automatic Copy)
+feature.flag.status.description.dev=Developer features are under active development. Do not activate unless you are on a development instance of DXP. (Automatic Copy)
+feature.flag.status.description.release=Release features provide an easy way to onboard new functionality in DXP. They are fully supported and can be activated individually and progressively. (Automatic Copy)
+feature.flag.status.title.beta=Beta (Automatic Copy)
+feature.flag.status.title.dev=Developer (Automatic Copy)
+feature.flag.status.title.release=Release (Automatic Copy)
 featured=Визначний
 featured-content=Рекомендований вміст (Automatic Translation)
 featured-image=Рекомендовані зображення (Automatic Translation)
@@ -6796,6 +6804,7 @@ filter-by-type=Фільтр за типом (Automatic Translation)
 filter-by-user=Фільтрування за користувачем (Automatic Translation)
 filter-by-user-group=Фільтрування за групою користувачів (Automatic Translation)
 filter-by-visibility=Filter by Visibility (Automatic Copy)
+filter-by-x=Filter by {0} (Automatic Copy)
 filter-collection=Filter Collection (Automatic Copy)
 filter-contacts=Фільтрування контактів (Automatic Translation)
 filter-field=Поле фільтра (Automatic Translation)
