--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
@@ -2836,6 +2836,7 @@ category.dynamic-data-lists=Danh sách dữ liệu động (Automatic Translatio
 category.dynamic-data-mapping=Ánh xạ dữ liệu động (Automatic Translation)
 category.email=Email (Automatic Translation)
 category.entertainment=Giải trí
+category.feature-flags=Feature Flags (Automatic Copy)
 category.file-storage=Lưu trữ tệp (Automatic Translation)
 category.finance=Tài chính
 category.form-navigator-extensions=Phần mở rộng Bộ điều hướng Biểu mẫu (Automatic Translation)
@@ -3997,6 +3998,7 @@ could-not-connect-to-address-x.-please-verify-that-the-specified-port-is-correct
 could-not-connect-to-the-database.-please-verify-that-the-settings-are-correct=Không thể kết nối tới cơ sở dữ liệu. Vui lòng kiểm chứng rằng các thiết đặt là chính xác. (Automatic Translation)
 could-not-connect-to-the-liferay-marketplace=Không thể kết nối với Thị trường Liferay. (Automatic Translation)
 could-not-save-draft-to-the-server=Không thể lưu trữ Bản nháp đến máy chủ.
+could-not-update-feature-flag=Could not update feature flag. (Automatic Copy)
 count=Đếm
 counters=Các bộ đếm
 countries=Nước (Automatic Translation)
@@ -6591,6 +6593,12 @@ favorites=Ưa thích
 fax=Fax (Automatic Translation)
 fax-number=Số Fax
 fbml=Fbml (Automatic Translation)
+feature.flag.status.description.beta=Beta features are experimental and not supported. Use with caution. (Automatic Copy)
+feature.flag.status.description.dev=Developer features are under active development. Do not activate unless you are on a development instance of DXP. (Automatic Copy)
+feature.flag.status.description.release=Release features provide an easy way to onboard new functionality in DXP. They are fully supported and can be activated individually and progressively. (Automatic Copy)
+feature.flag.status.title.beta=Beta (Automatic Copy)
+feature.flag.status.title.dev=Developer (Automatic Copy)
+feature.flag.status.title.release=Release (Automatic Copy)
 featured=Là hàng hóa đặc sắc - nổi bật
 featured-content=Nội dung nổi bật (Automatic Translation)
 featured-image=Hình ảnh nổi bật (Automatic Translation)
@@ -6796,6 +6804,7 @@ filter-by-type=Lọc theo Loại (Automatic Translation)
 filter-by-user=Lọc theo Người dùng
 filter-by-user-group=Lọc theo Nhóm người dùng
 filter-by-visibility=Filter by Visibility (Automatic Copy)
+filter-by-x=Filter by {0} (Automatic Copy)
 filter-collection=Filter Collection (Automatic Copy)
 filter-contacts=Lọc Liên hệ (Automatic Translation)
 filter-field=Trường Bộ lọc (Automatic Translation)
