--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
@@ -2836,6 +2836,7 @@ category.dynamic-data-lists=動態資料列表
 category.dynamic-data-mapping=動態資料映射
 category.email=電子郵件
 category.entertainment=娛樂
+category.feature-flags=Feature Flags (Automatic Copy)
 category.file-storage=檔案存儲
 category.finance=財務
 category.form-navigator-extensions=形式導航器擴展 (Automatic Translation)
@@ -3997,6 +3998,7 @@ could-not-connect-to-address-x.-please-verify-that-the-specified-port-is-correct
 could-not-connect-to-the-database.-please-verify-that-the-settings-are-correct=無法連接到資料庫。請驗證設置是否正確。 (Automatic Translation)
 could-not-connect-to-the-liferay-marketplace=連線不到Liferay市集。
 could-not-save-draft-to-the-server=無法儲存草稿到伺服器。
+could-not-update-feature-flag=Could not update feature flag. (Automatic Copy)
 count=計數
 counters=計數器
 countries=國家/地區
@@ -6591,6 +6593,12 @@ favorites=喜愛
 fax=傳真
 fax-number=傳真號碼
 fbml=FBML (Facebook Markup Language)
+feature.flag.status.description.beta=Beta features are experimental and not supported. Use with caution. (Automatic Copy)
+feature.flag.status.description.dev=Developer features are under active development. Do not activate unless you are on a development instance of DXP. (Automatic Copy)
+feature.flag.status.description.release=Release features provide an easy way to onboard new functionality in DXP. They are fully supported and can be activated individually and progressively. (Automatic Copy)
+feature.flag.status.title.beta=Beta (Automatic Copy)
+feature.flag.status.title.dev=Developer (Automatic Copy)
+feature.flag.status.title.release=Release (Automatic Copy)
 featured=特色的
 featured-content=精選內容
 featured-image=精選圖檔
@@ -6796,6 +6804,7 @@ filter-by-type=篩選 - 依類型
 filter-by-user=以使用者過濾
 filter-by-user-group=以使用者群組過濾
 filter-by-visibility=Filter by Visibility (Automatic Copy)
+filter-by-x=Filter by {0} (Automatic Copy)
 filter-collection=過濾集合
 filter-contacts=過濾聯絡人
 filter-field=篩選欄位
