--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
@@ -2836,6 +2836,7 @@ category.dynamic-data-lists=قوائم البيانات الديناميكية
 category.dynamic-data-mapping=تعيين البيانات الديناميكية
 category.email=بريد إلكتروني
 category.entertainment=تسلية
+category.feature-flags=Feature Flags (Automatic Copy)
 category.file-storage=تخزين الملفات
 category.finance=مالية
 category.form-navigator-extensions=امتدادات متصفح النماذج
@@ -3997,6 +3998,7 @@ could-not-connect-to-address-x.-please-verify-that-the-specified-port-is-correct
 could-not-connect-to-the-database.-please-verify-that-the-settings-are-correct=يتعذر الاتصال بقاعدة البيانات. لذا، يُرجى التحقق من صحة الإعدادات.
 could-not-connect-to-the-liferay-marketplace=تعذر الاتصال بسوق Liferay.
 could-not-save-draft-to-the-server=تعذر حفظ المسودة في الخادم.
+could-not-update-feature-flag=Could not update feature flag. (Automatic Copy)
 count=العدد
 counters=البلد
 countries=الدول
@@ -6591,6 +6593,12 @@ favorites=المفضلات
 fax=فاكس
 fax-number=رقم الفاكس
 fbml=FBML
+feature.flag.status.description.beta=Beta features are experimental and not supported. Use with caution. (Automatic Copy)
+feature.flag.status.description.dev=Developer features are under active development. Do not activate unless you are on a development instance of DXP. (Automatic Copy)
+feature.flag.status.description.release=Release features provide an easy way to onboard new functionality in DXP. They are fully supported and can be activated individually and progressively. (Automatic Copy)
+feature.flag.status.title.beta=Beta (Automatic Copy)
+feature.flag.status.title.dev=Developer (Automatic Copy)
+feature.flag.status.title.release=Release (Automatic Copy)
 featured=مقترحة
 featured-content=محتوى مميز
 featured-image=صورة مميزة
@@ -6796,6 +6804,7 @@ filter-by-type=تصفية حسب النوع
 filter-by-user=الفرز حسب المستخدم
 filter-by-user-group=الفرز حسب مجموعة المستخدمين
 filter-by-visibility=تصفية حسب الرؤية
+filter-by-x=Filter by {0} (Automatic Copy)
 filter-collection=تصفية التحصيل
 filter-contacts=تصفية جهات الاتصال
 filter-field=حقل عامل التصفية
