--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
@@ -2836,6 +2836,7 @@ category.dynamic-data-lists=Списъци с динамични данни (Aut
 category.dynamic-data-mapping=Съпоставяне на динамични данни (Automatic Translation)
 category.email=Имейл (Automatic Translation)
 category.entertainment=Забавление
+category.feature-flags=Feature Flags (Automatic Copy)
 category.file-storage=Съхранение на файлове (Automatic Translation)
 category.finance=Финанси
 category.form-navigator-extensions=Разширения на навигатор за формуляри (Automatic Translation)
@@ -3997,6 +3998,7 @@ could-not-connect-to-address-x.-please-verify-that-the-specified-port-is-correct
 could-not-connect-to-the-database.-please-verify-that-the-settings-are-correct=Не може да се свърже с базата данни. Проверете дали настройките са правилни. (Automatic Translation)
 could-not-connect-to-the-liferay-marketplace=Не може да се свърже с пазара на Liferay. (Automatic Translation)
 could-not-save-draft-to-the-server=Черновата може да бъде запазена върху сървъра.
+could-not-update-feature-flag=Could not update feature flag. (Automatic Copy)
 count=Брой (Automatic Translation)
 counters=Страна
 countries=Страни (Automatic Translation)
@@ -6591,6 +6593,12 @@ favorites=Предпочитания
 fax=Факс
 fax-number=Номер на факс
 fbml=Fbml (Automatic Translation)
+feature.flag.status.description.beta=Beta features are experimental and not supported. Use with caution. (Automatic Copy)
+feature.flag.status.description.dev=Developer features are under active development. Do not activate unless you are on a development instance of DXP. (Automatic Copy)
+feature.flag.status.description.release=Release features provide an easy way to onboard new functionality in DXP. They are fully supported and can be activated individually and progressively. (Automatic Copy)
+feature.flag.status.title.beta=Beta (Automatic Copy)
+feature.flag.status.title.dev=Developer (Automatic Copy)
+feature.flag.status.title.release=Release (Automatic Copy)
 featured=Срещани
 featured-content=Съдържание, което се показва (Automatic Translation)
 featured-image=Изображение на избрани (Automatic Translation)
@@ -6796,6 +6804,7 @@ filter-by-type=Филтриране по тип (Automatic Translation)
 filter-by-user=Филтриране по потребител (Automatic Translation)
 filter-by-user-group=Филтър по потребителска група
 filter-by-visibility=Filter by Visibility (Automatic Copy)
+filter-by-x=Filter by {0} (Automatic Copy)
 filter-collection=Filter Collection (Automatic Copy)
 filter-contacts=Филтриране на контакти (Automatic Translation)
 filter-field=Поле за филтър (Automatic Translation)
