--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
@@ -2836,6 +2836,7 @@ category.dynamic-data-lists=Dynamiske datalister (Automatic Translation)
 category.dynamic-data-mapping=Dynamisk datatilknytning (Automatic Translation)
 category.email=E-mail (Automatic Translation)
 category.entertainment=Underholdning
+category.feature-flags=Feature Flags (Automatic Copy)
 category.file-storage=Fillagring (Automatic Translation)
 category.finance=Finans
 category.form-navigator-extensions=Udvidelser til Formularsøgning (Automatic Translation)
@@ -3997,6 +3998,7 @@ could-not-connect-to-address-x.-please-verify-that-the-specified-port-is-correct
 could-not-connect-to-the-database.-please-verify-that-the-settings-are-correct=Der kunne ikke oprettes forbindelse til databasen. Kontroller, at indstillingerne er korrekte. (Automatic Translation)
 could-not-connect-to-the-liferay-marketplace=Der kunne ikke oprettes forbindelse til Liferay Marketplace. (Automatic Translation)
 could-not-save-draft-to-the-server=Could not save draft to the server. (Automatic Copy)
+could-not-update-feature-flag=Could not update feature flag. (Automatic Copy)
 count=Count (Automatic Copy)
 counters=Land
 countries=Lande (Automatic Translation)
@@ -6591,6 +6593,12 @@ favorites=Favorites (Automatic Copy)
 fax=Fax (Automatic Copy)
 fax-number=Fax Number (Automatic Copy)
 fbml=FBML (Automatic Copy)
+feature.flag.status.description.beta=Beta features are experimental and not supported. Use with caution. (Automatic Copy)
+feature.flag.status.description.dev=Developer features are under active development. Do not activate unless you are on a development instance of DXP. (Automatic Copy)
+feature.flag.status.description.release=Release features provide an easy way to onboard new functionality in DXP. They are fully supported and can be activated individually and progressively. (Automatic Copy)
+feature.flag.status.title.beta=Beta (Automatic Copy)
+feature.flag.status.title.dev=Developer (Automatic Copy)
+feature.flag.status.title.release=Release (Automatic Copy)
 featured=Featured (Automatic Copy)
 featured-content=Udvalgt indhold (Automatic Translation)
 featured-image=Udvalgt billede (Automatic Translation)
@@ -6796,6 +6804,7 @@ filter-by-type=Filtrer efter type (Automatic Translation)
 filter-by-user=Filtrer efter bruger
 filter-by-user-group=Filtrer efter brugergruppe
 filter-by-visibility=Filter by Visibility (Automatic Copy)
+filter-by-x=Filter by {0} (Automatic Copy)
 filter-collection=Filter Collection (Automatic Copy)
 filter-contacts=Filtrer kontaktpersoner (Automatic Translation)
 filter-field=Filtrer felt (Automatic Translation)
