--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -2836,6 +2836,7 @@ category.dynamic-data-lists=Dynamische Datenlisten
 category.dynamic-data-mapping=Dynamische Datenzuordnungen
 category.email=E-Mail
 category.entertainment=Unterhaltung
+category.feature-flags=Feature Flags (Automatic Copy)
 category.file-storage=Dateispeicher
 category.finance=Finanzen
 category.form-navigator-extensions=Form Navigator-Erweiterungen
@@ -3997,6 +3998,7 @@ could-not-connect-to-address-x.-please-verify-that-the-specified-port-is-correct
 could-not-connect-to-the-database.-please-verify-that-the-settings-are-correct=Verbindung mit der Datenbank nicht möglich. Bitte prüfen Sie, ob die Einstellungen korrekt sind.
 could-not-connect-to-the-liferay-marketplace=Es konnte keine Verbindung zum Liferay Marketplace hergestellt werden.
 could-not-save-draft-to-the-server=Der Entwurf konnte nicht auf dem Server gespeichert werden.
+could-not-update-feature-flag=Could not update feature flag. (Automatic Copy)
 count=Anzahl
 counters=Zähler
 countries=Länder
@@ -6591,6 +6593,12 @@ favorites=Favoriten
 fax=Fax
 fax-number=Faxnummer
 fbml=FBML
+feature.flag.status.description.beta=Beta features are experimental and not supported. Use with caution. (Automatic Copy)
+feature.flag.status.description.dev=Developer features are under active development. Do not activate unless you are on a development instance of DXP. (Automatic Copy)
+feature.flag.status.description.release=Release features provide an easy way to onboard new functionality in DXP. They are fully supported and can be activated individually and progressively. (Automatic Copy)
+feature.flag.status.title.beta=Beta (Automatic Copy)
+feature.flag.status.title.dev=Developer (Automatic Copy)
+feature.flag.status.title.release=Release (Automatic Copy)
 featured=Ausgewählt
 featured-content=Ausgewählte Inhalte
 featured-image=Empfohlenes Bild
@@ -6796,6 +6804,7 @@ filter-by-type=Nach Typ filtern
 filter-by-user=Nach Benutzer filtern
 filter-by-user-group=Nach Benutzergruppe filtern
 filter-by-visibility=Nach Sichtbarkeit filtern
+filter-by-x=Filter by {0} (Automatic Copy)
 filter-collection=Sammlung filtern
 filter-contacts=Kontakte filtern
 filter-field=Filterfeld
