--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es_AR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es_AR.properties
@@ -2836,6 +2836,7 @@ category.dynamic-data-lists=Listas de datos dinámicos
 category.dynamic-data-mapping=Asignación de datos dinámicos
 category.email=Correo electrónico
 category.entertainment=Entretenimiento
+category.feature-flags=Feature Flags (Automatic Copy)
 category.file-storage=Almacenamiento de archivos
 category.finance=Finanzas
 category.form-navigator-extensions=Extensiones del navegador de formularios
@@ -3997,6 +3998,7 @@ could-not-connect-to-address-x.-please-verify-that-the-specified-port-is-correct
 could-not-connect-to-the-database.-please-verify-that-the-settings-are-correct=No se puede establecer conexión con la base de datos. Asegúrese de que la configuración sea correcta.
 could-not-connect-to-the-liferay-marketplace=No se ha podido establecer la conexión con el Marketplace de Liferay.
 could-not-save-draft-to-the-server=Lo siento, se ha producido un error. No se ha podido guardar el borrador.
+could-not-update-feature-flag=Could not update feature flag. (Automatic Copy)
 count=Recuento
 counters=Contadores
 countries=Países
@@ -6591,6 +6593,12 @@ favorites=Favoritos
 fax=Fax
 fax-number=Número de fax
 fbml=FBML
+feature.flag.status.description.beta=Beta features are experimental and not supported. Use with caution. (Automatic Copy)
+feature.flag.status.description.dev=Developer features are under active development. Do not activate unless you are on a development instance of DXP. (Automatic Copy)
+feature.flag.status.description.release=Release features provide an easy way to onboard new functionality in DXP. They are fully supported and can be activated individually and progressively. (Automatic Copy)
+feature.flag.status.title.beta=Beta (Automatic Copy)
+feature.flag.status.title.dev=Developer (Automatic Copy)
+feature.flag.status.title.release=Release (Automatic Copy)
 featured=Destacado
 featured-content=Contenido destacado
 featured-image=Imagen destacada
@@ -6796,6 +6804,7 @@ filter-by-type=Filtrar por tipo
 filter-by-user=Filtro por usuario
 filter-by-user-group=Filtrar por grupo de usuario
 filter-by-visibility=Filtrar por visibilidad
+filter-by-x=Filter by {0} (Automatic Copy)
 filter-collection=Filtrar colección
 filter-contacts=Filtrar contactos
 filter-field=Campo de filtro
