--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_eu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_eu.properties
@@ -2836,6 +2836,7 @@ category.dynamic-data-lists=Dynamic Data Lists (Automatic Copy)
 category.dynamic-data-mapping=Dynamic Data Mapping (Automatic Copy)
 category.email=Email (Automatic Copy)
 category.entertainment=Denbora-pasa
+category.feature-flags=Feature Flags (Automatic Copy)
 category.file-storage=File Storage (Automatic Copy)
 category.finance=Finantza
 category.form-navigator-extensions=Form Navigator Extensions (Automatic Copy)
@@ -3997,6 +3998,7 @@ could-not-connect-to-address-x.-please-verify-that-the-specified-port-is-correct
 could-not-connect-to-the-database.-please-verify-that-the-settings-are-correct=Could not connect to the database. Please verify that the settings are correct. (Automatic Copy)
 could-not-connect-to-the-liferay-marketplace=Ezin izan da konektatu Liferay Marketplace-arekin.
 could-not-save-draft-to-the-server=Zirriborroa ezin da zerbitzarian gorde.
+could-not-update-feature-flag=Could not update feature flag. (Automatic Copy)
 count=Count (Automatic Copy)
 counters=Zenbatzaileak
 countries=Countries (Automatic Copy)
@@ -6591,6 +6593,12 @@ favorites=Gogokoak
 fax=Faxa
 fax-number=Fax zenbakia
 fbml=FBML (Automatic Copy)
+feature.flag.status.description.beta=Beta features are experimental and not supported. Use with caution. (Automatic Copy)
+feature.flag.status.description.dev=Developer features are under active development. Do not activate unless you are on a development instance of DXP. (Automatic Copy)
+feature.flag.status.description.release=Release features provide an easy way to onboard new functionality in DXP. They are fully supported and can be activated individually and progressively. (Automatic Copy)
+feature.flag.status.title.beta=Beta (Automatic Copy)
+feature.flag.status.title.dev=Developer (Automatic Copy)
+feature.flag.status.title.release=Release (Automatic Copy)
 featured=Berezia
 featured-content=Featured Content (Automatic Copy)
 featured-image=Irudi nabarmena
@@ -6796,6 +6804,7 @@ filter-by-type=Filter by Type (Automatic Copy)
 filter-by-user=Erabiltzaile iragazkia
 filter-by-user-group=Erabiltzaile multzoaren arabera iragazi
 filter-by-visibility=Filter by Visibility (Automatic Copy)
+filter-by-x=Filter by {0} (Automatic Copy)
 filter-collection=Filter Collection (Automatic Copy)
 filter-contacts=Iragazitako Kontaktuak
 filter-field=Filter Field (Automatic Copy)
