--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
@@ -2836,6 +2836,7 @@ category.dynamic-data-lists=רשימות נתונים דינמיים
 category.dynamic-data-mapping=מיפוי נתונים דינמיים
 category.email=דואר אלקטרוני (Automatic Translation)
 category.entertainment=בידור
+category.feature-flags=Feature Flags (Automatic Copy)
 category.file-storage=אחסון קבצים
 category.finance=כלכלה
 category.form-navigator-extensions=הרחבות נווט טפסים (Automatic Translation)
@@ -3997,6 +3998,7 @@ could-not-connect-to-address-x.-please-verify-that-the-specified-port-is-correct
 could-not-connect-to-the-database.-please-verify-that-the-settings-are-correct=לא ניתן להתחבר למסד הנתונים. אנא ודא שההגדרות נכונות.
 could-not-connect-to-the-liferay-marketplace=Liferay לא מחובר לחנות
 could-not-save-draft-to-the-server=לא ניתן לשמור טיוטה לשרת
+could-not-update-feature-flag=Could not update feature flag. (Automatic Copy)
 count=מניה
 counters=מונים
 countries=ארצות
@@ -6591,6 +6593,12 @@ favorites=מועדפים
 fax=פקס
 fax-number=מספר פקס
 fbml=FBML (Automatic Translation)
+feature.flag.status.description.beta=Beta features are experimental and not supported. Use with caution. (Automatic Copy)
+feature.flag.status.description.dev=Developer features are under active development. Do not activate unless you are on a development instance of DXP. (Automatic Copy)
+feature.flag.status.description.release=Release features provide an easy way to onboard new functionality in DXP. They are fully supported and can be activated individually and progressively. (Automatic Copy)
+feature.flag.status.title.beta=Beta (Automatic Copy)
+feature.flag.status.title.dev=Developer (Automatic Copy)
+feature.flag.status.title.release=Release (Automatic Copy)
 featured=מוצג
 featured-content=תוכן מוצג (Automatic Translation)
 featured-image=תמונה מוצגת (Automatic Translation)
@@ -6796,6 +6804,7 @@ filter-by-type=סנן לפי סוג (Automatic Translation)
 filter-by-user=סנן לפי המשתמש
 filter-by-user-group=סנן לפי קבוצת המשתמשים
 filter-by-visibility=Filter by Visibility (Automatic Copy)
+filter-by-x=Filter by {0} (Automatic Copy)
 filter-collection=Filter Collection (Automatic Copy)
 filter-contacts=סנן אנשי קשר
 filter-field=שדה סינון (Automatic Translation)
