--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
@@ -2836,6 +2836,7 @@ category.dynamic-data-lists=動的データリスト
 category.dynamic-data-mapping=動的データマッピング
 category.email=メール
 category.entertainment=エンターテイメント
+category.feature-flags=Feature Flags (Automatic Copy)
 category.file-storage=ファイル ストレージ
 category.finance=ファイナンス
 category.form-navigator-extensions=フォームナビゲーター拡張
@@ -3997,6 +3998,7 @@ could-not-connect-to-address-x.-please-verify-that-the-specified-port-is-correct
 could-not-connect-to-the-database.-please-verify-that-the-settings-are-correct=データベースに接続できません。設定が正しいか確認してください。
 could-not-connect-to-the-liferay-marketplace=ライフレイマーケットプレイスに接続できません。
 could-not-save-draft-to-the-server=サーバに下書きを保存できませんでした。
+could-not-update-feature-flag=Could not update feature flag. (Automatic Copy)
 count=回数
 counters=カウンター
 countries=国
@@ -6591,6 +6593,12 @@ favorites=お気に入り
 fax=FAX
 fax-number=FAX番号
 fbml=FBML
+feature.flag.status.description.beta=Beta features are experimental and not supported. Use with caution. (Automatic Copy)
+feature.flag.status.description.dev=Developer features are under active development. Do not activate unless you are on a development instance of DXP. (Automatic Copy)
+feature.flag.status.description.release=Release features provide an easy way to onboard new functionality in DXP. They are fully supported and can be activated individually and progressively. (Automatic Copy)
+feature.flag.status.title.beta=Beta (Automatic Copy)
+feature.flag.status.title.dev=Developer (Automatic Copy)
+feature.flag.status.title.release=Release (Automatic Copy)
 featured=メイン
 featured-content=主なコンテンツ
 featured-image=メイン画像
@@ -6796,6 +6804,7 @@ filter-by-type=種類で絞り込む
 filter-by-user=ユーザーで絞り込む
 filter-by-user-group=ユーザーグループで絞り込む
 filter-by-visibility=可視性でフィルター
+filter-by-x=Filter by {0} (Automatic Copy)
 filter-collection=コレクションをフィルター
 filter-contacts=コンタクトで絞り込む
 filter-field=フィルタフィールド
