--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
@@ -2836,6 +2836,7 @@ category.dynamic-data-lists=Dynamiske datalister
 category.dynamic-data-mapping=Dynamisk data
 category.email=Epost
 category.entertainment=Underholdning
+category.feature-flags=Feature Flags (Automatic Copy)
 category.file-storage=Fillagring
 category.finance=Økonomi
 category.form-navigator-extensions=Utvidelser for skjemanavigator (Automatic Translation)
@@ -3997,6 +3998,7 @@ could-not-connect-to-address-x.-please-verify-that-the-specified-port-is-correct
 could-not-connect-to-the-database.-please-verify-that-the-settings-are-correct=Kan ikke koble til databasen. Kontroller at innstillingene er riktige. (Automatic Translation)
 could-not-connect-to-the-liferay-marketplace=Kunne ikke koble til Liferay Markedsplass.
 could-not-save-draft-to-the-server=Kunne ikke lagre utkast til tjeneren.
+could-not-update-feature-flag=Could not update feature flag. (Automatic Copy)
 count=Antall
 counters=Tellere
 countries=Land (Automatic Translation)
@@ -6591,6 +6593,12 @@ favorites=Favoritter
 fax=Faks
 fax-number=Faksnummer
 fbml=Fbml (Automatic Translation)
+feature.flag.status.description.beta=Beta features are experimental and not supported. Use with caution. (Automatic Copy)
+feature.flag.status.description.dev=Developer features are under active development. Do not activate unless you are on a development instance of DXP. (Automatic Copy)
+feature.flag.status.description.release=Release features provide an easy way to onboard new functionality in DXP. They are fully supported and can be activated individually and progressively. (Automatic Copy)
+feature.flag.status.title.beta=Beta (Automatic Copy)
+feature.flag.status.title.dev=Developer (Automatic Copy)
+feature.flag.status.title.release=Release (Automatic Copy)
 featured=Inkludert
 featured-content=Fremhevet innhold
 featured-image=Fremhevet bilde
@@ -6796,6 +6804,7 @@ filter-by-type=Filtrer etter type (Automatic Translation)
 filter-by-user=Filtrer utfra bruker
 filter-by-user-group=Filtrer etter brukergruppe
 filter-by-visibility=Filter by Visibility (Automatic Copy)
+filter-by-x=Filter by {0} (Automatic Copy)
 filter-collection=Filter Collection (Automatic Copy)
 filter-contacts=Filtrér kontakter
 filter-field=Filtrer felt (Automatic Translation)
