--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
@@ -2836,6 +2836,7 @@ category.dynamic-data-lists=Listas de dados dinâmicos (Automatic Translation)
 category.dynamic-data-mapping=Mapeamento dinâmico de dados (Automatic Translation)
 category.email=Email (Automatic Translation)
 category.entertainment=Entretenimento
+category.feature-flags=Feature Flags (Automatic Copy)
 category.file-storage=Armazenamento de arquivos (Automatic Translation)
 category.finance=Finanças
 category.form-navigator-extensions=Extensões do navegador de formulário (Automatic Translation)
@@ -3997,6 +3998,7 @@ could-not-connect-to-address-x.-please-verify-that-the-specified-port-is-correct
 could-not-connect-to-the-database.-please-verify-that-the-settings-are-correct=Não foi possível se conectar ao banco de dados. Verifique se as configurações estão corretas. (Automatic Translation)
 could-not-connect-to-the-liferay-marketplace=Não foi possível estabelecer conexão com o Mercado de Aplicações da Liferay.
 could-not-save-draft-to-the-server=Não foi possível guardar o rascunho no servidor.
+could-not-update-feature-flag=Could not update feature flag. (Automatic Copy)
 count=Contagem
 counters=Contadores
 countries=Países (Automatic Translation)
@@ -6591,6 +6593,12 @@ favorites=Favoritos
 fax=Fax (Automatic Copy)
 fax-number=Número de Fax
 fbml=FBML (Automatic Copy)
+feature.flag.status.description.beta=Beta features are experimental and not supported. Use with caution. (Automatic Copy)
+feature.flag.status.description.dev=Developer features are under active development. Do not activate unless you are on a development instance of DXP. (Automatic Copy)
+feature.flag.status.description.release=Release features provide an easy way to onboard new functionality in DXP. They are fully supported and can be activated individually and progressively. (Automatic Copy)
+feature.flag.status.title.beta=Beta (Automatic Copy)
+feature.flag.status.title.dev=Developer (Automatic Copy)
+feature.flag.status.title.release=Release (Automatic Copy)
 featured=Em destaque
 featured-content=Conteúdo em destaque (Automatic Translation)
 featured-image=Imagem em destaque (Automatic Translation)
@@ -6796,6 +6804,7 @@ filter-by-type=Filtrar por tipo (Automatic Translation)
 filter-by-user=Filtrar por utilizador
 filter-by-user-group=Filtrar por grupo de utilizadores
 filter-by-visibility=Filter by Visibility (Automatic Copy)
+filter-by-x=Filter by {0} (Automatic Copy)
 filter-collection=Filter Collection (Automatic Copy)
 filter-contacts=Filtrar Contactos
 filter-field=Campo de filtro (Automatic Translation)
