--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
@@ -2836,6 +2836,7 @@ category.dynamic-data-lists=Dynamické zoznamy údajov (Automatic Translation)
 category.dynamic-data-mapping=Dynamické mapovanie údajov (Automatic Translation)
 category.email=E-mail (Automatic Translation)
 category.entertainment=Zábava
+category.feature-flags=Feature Flags (Automatic Copy)
 category.file-storage=Ukladací priestor súborov (Automatic Translation)
 category.finance=Financie
 category.form-navigator-extensions=Rozšírenia navigátora formulárov (Automatic Translation)
@@ -3997,6 +3998,7 @@ could-not-connect-to-address-x.-please-verify-that-the-specified-port-is-correct
 could-not-connect-to-the-database.-please-verify-that-the-settings-are-correct=Nepodarilo sa pripojiť k databáze. Skontrolujte, či sú nastavenia správne. (Automatic Translation)
 could-not-connect-to-the-liferay-marketplace=Nepodarilo sa pripojiť do Liferay trhovisko.
 could-not-save-draft-to-the-server=Nepodarilo sa uložiť koncept na server.
+could-not-update-feature-flag=Could not update feature flag. (Automatic Copy)
 count=Počet
 counters=Počítadlá
 countries=Krajín (Automatic Translation)
@@ -6591,6 +6593,12 @@ favorites=Obľúbené
 fax=Fax (Automatic Translation)
 fax-number=Faxové číslo
 fbml=FBML (Facebook Markup Language)
+feature.flag.status.description.beta=Beta features are experimental and not supported. Use with caution. (Automatic Copy)
+feature.flag.status.description.dev=Developer features are under active development. Do not activate unless you are on a development instance of DXP. (Automatic Copy)
+feature.flag.status.description.release=Release features provide an easy way to onboard new functionality in DXP. They are fully supported and can be activated individually and progressively. (Automatic Copy)
+feature.flag.status.title.beta=Beta (Automatic Copy)
+feature.flag.status.title.dev=Developer (Automatic Copy)
+feature.flag.status.title.release=Release (Automatic Copy)
 featured=Hlavné
 featured-content=Odporúčaný obsah (Automatic Translation)
 featured-image=Odporúčaný obrázok (Automatic Translation)
@@ -6796,6 +6804,7 @@ filter-by-type=Filtrovanie podľa typu (Automatic Translation)
 filter-by-user=Filtrovať podľa používateľa
 filter-by-user-group=Filtrovať podľa skupiny používateľov
 filter-by-visibility=Filter by Visibility (Automatic Copy)
+filter-by-x=Filter by {0} (Automatic Copy)
 filter-collection=Filter Collection (Automatic Copy)
 filter-contacts=Filtrovať kontakty
 filter-field=Pole filtra (Automatic Translation)
