--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
@@ -2836,6 +2836,7 @@ category.dynamic-data-lists=Dinamik Veri Listeleri (Automatic Translation)
 category.dynamic-data-mapping=Dinamik Veri Eşleme (Automatic Translation)
 category.email=E-posta (Automatic Translation)
 category.entertainment=Eğlence
+category.feature-flags=Feature Flags (Automatic Copy)
 category.file-storage=Dosya Depolama (Automatic Translation)
 category.finance=Finans
 category.form-navigator-extensions=Form Gezgini Uzantıları (Automatic Translation)
@@ -3997,6 +3998,7 @@ could-not-connect-to-address-x.-please-verify-that-the-specified-port-is-correct
 could-not-connect-to-the-database.-please-verify-that-the-settings-are-correct=Veritabanına bağlanılamadı. Lütfen ayarların doğru olduğunu doğrulayın. (Automatic Translation)
 could-not-connect-to-the-liferay-marketplace=Liferay Marketplace'e bağlanılamadı. (Automatic Translation)
 could-not-save-draft-to-the-server=Taslak server'a kaydedilemiyor.
+could-not-update-feature-flag=Could not update feature flag. (Automatic Copy)
 count=Sayısı (Automatic Translation)
 counters=Ülke
 countries=Ülke (Automatic Translation)
@@ -6591,6 +6593,12 @@ favorites=En Sevilenler
 fax=Faks
 fax-number=Faks Numarası
 fbml=Fbml (Automatic Translation)
+feature.flag.status.description.beta=Beta features are experimental and not supported. Use with caution. (Automatic Copy)
+feature.flag.status.description.dev=Developer features are under active development. Do not activate unless you are on a development instance of DXP. (Automatic Copy)
+feature.flag.status.description.release=Release features provide an easy way to onboard new functionality in DXP. They are fully supported and can be activated individually and progressively. (Automatic Copy)
+feature.flag.status.title.beta=Beta (Automatic Copy)
+feature.flag.status.title.dev=Developer (Automatic Copy)
+feature.flag.status.title.release=Release (Automatic Copy)
 featured=Özellikli
 featured-content=Öne Çıkan İçerik (Automatic Translation)
 featured-image=Öne Çıkan Resim (Automatic Translation)
@@ -6796,6 +6804,7 @@ filter-by-type=Türe Göre Filtre Uygula (Automatic Translation)
 filter-by-user=Kullanıcıya Göre Filtre Uygula (Automatic Translation)
 filter-by-user-group=Kullanıcı Grubuna göre filtrele
 filter-by-visibility=Filter by Visibility (Automatic Copy)
+filter-by-x=Filter by {0} (Automatic Copy)
 filter-collection=Filter Collection (Automatic Copy)
 filter-contacts=Kişilere Filtre Uygula (Automatic Translation)
 filter-field=Filtre Alanı (Automatic Translation)
