--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
@@ -2836,6 +2836,7 @@ category.dynamic-data-lists=动态数据列表
 category.dynamic-data-mapping=动态数据映射
 category.email=电子邮件
 category.entertainment=娱乐
+category.feature-flags=Feature Flags (Automatic Copy)
 category.file-storage=文件存储
 category.finance=理财
 category.form-navigator-extensions=表单导航器扩展
@@ -3997,6 +3998,7 @@ could-not-connect-to-address-x.-please-verify-that-the-specified-port-is-correct
 could-not-connect-to-the-database.-please-verify-that-the-settings-are-correct=无法连接到数据库。请验证设置是否正确。
 could-not-connect-to-the-liferay-marketplace=不能连接至Liferay Marketplace。
 could-not-save-draft-to-the-server=不能将草稿保存到服务器。
+could-not-update-feature-flag=Could not update feature flag. (Automatic Copy)
 count=计数
 counters=计数器
 countries=国家/地区
@@ -6591,6 +6593,12 @@ favorites=收藏夹
 fax=传真
 fax-number=传真号
 fbml=FBML
+feature.flag.status.description.beta=Beta features are experimental and not supported. Use with caution. (Automatic Copy)
+feature.flag.status.description.dev=Developer features are under active development. Do not activate unless you are on a development instance of DXP. (Automatic Copy)
+feature.flag.status.description.release=Release features provide an easy way to onboard new functionality in DXP. They are fully supported and can be activated individually and progressively. (Automatic Copy)
+feature.flag.status.title.beta=Beta (Automatic Copy)
+feature.flag.status.title.dev=Developer (Automatic Copy)
+feature.flag.status.title.release=Release (Automatic Copy)
 featured=特色的
 featured-content=精选内容
 featured-image=特选图像
@@ -6796,6 +6804,7 @@ filter-by-type=按类型筛选
 filter-by-user=按照用户筛选
 filter-by-user-group=按照用户组筛选
 filter-by-visibility=按可见性筛选
+filter-by-x=Filter by {0} (Automatic Copy)
 filter-collection=筛选集合
 filter-contacts=筛选联络人
 filter-field=筛选字段
